--- a/src/Planner.css
+++ b/src/Planner.css
@@ -130,15 +130,13 @@
         flex-direction: column;
         align-items: center;
         width: 100%;
-        gap: 0.4em;
+        gap: 0.6em;
     }
     
     .Planner .footer-buttons .eatstash-button {
         width: auto;
-        margin-bottom: 0.5em;
     }
     
     .Planner .footer-buttons .coffee-button {
-        margin-bottom: 0.5em;
     }
 }
